<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_ready_to_used" />

    <TextView
        android:id="@+id/resultPreference1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pref1" />

    <TextView
        android:id="@+id/resultPreference2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref2" />

    <TextView
        android:id="@+id/resultPreference3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref3" />

    <Button
        android:id="@+id/buttonErasePrefs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:text="@string/erasePrefs" >
    </Button>

</LinearLayout>