<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/preference3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/pref3"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/preference3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:entries="@array/item_arrays"
        android:prompt="@string/spinner_prompt" />

    <TextView
        android:id="@+id/invisibleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="" />

    <Button
        android:id="@+id/ButtonPrevV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/invisibleTextView"
        android:layout_marginLeft="30dp"
        android:layout_toLeftOf="@+id/invisibleTextView"
        android:onClick="onClick"
        android:text="@string/prev" />

    <Button
        android:id="@+id/ButtonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/invisibleTextView"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/invisibleTextView"
        android:onClick="onClick"
        android:text="@string/finish" />

</RelativeLayout>